Fix navbar adding unintended whitespace on the right of the screen

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,7 +8,6 @@
 
 .navbar {
     background-color: transparent;
-    padding: 0.5rem;
     display: flex;
     justify-content: flex-end;
     z-index: 1000;
@@ -24,7 +23,6 @@
     flex-wrap: wrap;
     justify-content: flex-end;
     margin-top: 0;
-    margin-right: 1rem;
 }
 
 .nav-links li {
